--- a/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd14_translation-en-brahmali.json
+++ b/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd14_translation-en-brahmali.json
@@ -704,9 +704,9 @@
   "pli-tv-kd14:14.3.17": "Such a monk is disrespectful and undeferential toward the Teacher, the Teaching, and the Sangha, and he doesn’t fulfill the training. ",
   "pli-tv-kd14:14.3.18": "Such a person ",
   "pli-tv-kd14:14.3.20": "creates disputes in the Sangha. ",
-  "pli-tv-kd14:14.3.21": "Disputes are unbeneficial and a cause of unhappiness for humanity; they are harmful, detrimental, and a cause of suffering for gods and humans. ",
-  "pli-tv-kd14:14.3.22": "Monks, when you see such a root of disputes either in yourself or in others, you should make an effort to get rid of it. ",
-  "pli-tv-kd14:14.3.23": "If you don’t see such a root either in yourself or in others, you should practice so that it doesn’t reappear in the future. ",
+  "pli-tv-kd14:14.3.21": "Disputes are unbeneficial and a cause of unhappiness for humanity; they’re harmful, detrimental, and a cause of suffering for gods and humans. ",
+  "pli-tv-kd14:14.3.22": "Monks, when you see such a root of disputes either in yourself or others, you should make an effort to get rid of it. ",
+  "pli-tv-kd14:14.3.23": "If you don’t see such a root either in yourself or others, you should practice so that it doesn’t emerge in the future. ",
   "pli-tv-kd14:14.3.24": "In this way that bad root of disputes is abandoned. ",
   "pli-tv-kd14:14.3.25": "In this way that bad root of disputes has no future effect. ",
   "pli-tv-kd14:14.4.1": "What are the three unwholesome roots of legal issues arising from disputes? ",
