--- a/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd14_translation-en-brahmali.json
+++ b/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd14_translation-en-brahmali.json
@@ -713,7 +713,7 @@
   "pli-tv-kd14:14.4.2": "It may be that monks dispute with a mind of greed, ill will, or delusion, saying, ",
   "pli-tv-kd14:14.4.3": "‘This is the Teaching’, ‘This is contrary to the Teaching’, ‘This is the Monastic Law’, ‘This is contrary to the Monastic Law’, ‘This was spoken by the Buddha’, ‘This wasn’t spoken by the Buddha’, ‘This was practiced by the Buddha’, ‘This wasn’t practiced by the Buddha’, ‘This was laid down by the Buddha’, ‘This wasn’t laid down by the Buddha’, ‘This is an offense’, ‘This isn’t an offense’, ‘This is a light offense’, ‘This is a heavy offense’, ‘This is a curable offense’, ‘This is an incurable offense’, ‘This is a grave offense’, or ‘This is a minor offense.’ ",
   "pli-tv-kd14:14.4.5": "What are the three wholesome roots of legal issues arising from disputes? ",
-  "pli-tv-kd14:14.4.6": "It may be that monks dispute with a mind free from greed, free from ill will, free from delusion, saying, ",
+  "pli-tv-kd14:14.4.6": "It may be that monks dispute with a mind free from greed, ill will, and delusion, saying, ",
   "pli-tv-kd14:14.4.7": "‘This is the Teaching’, ‘This is contrary to the Teaching’ … ",
   "pli-tv-kd14:14.4.8": "‘This is a grave offense’, or ‘This is a minor offense.’ ",
   "pli-tv-kd14:14.5.1": "(2b) What is the root of legal issues arising from accusations? ",
