--- a/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd14_translation-en-brahmali.json
+++ b/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd14_translation-en-brahmali.json
@@ -723,10 +723,10 @@
   "pli-tv-kd14:14.5.5": "It may be that a monk is angry and resentful. ",
   "pli-tv-kd14:14.5.6": "One who is angry and resentful is disrespectful and undeferential toward the Teacher, the Teaching, and the Sangha, and he doesn’t fulfill the training. ",
   "pli-tv-kd14:14.5.7": "Such a person ",
-  "pli-tv-kd14:14.5.9": "creates accusations in the Sangha. ",
-  "pli-tv-kd14:14.5.10": "Accusations are unbeneficial and a cause of unhappiness for humanity; they are harmful, detrimental, and a cause of suffering for gods and humans. ",
-  "pli-tv-kd14:14.5.11": "Monks, when you see such a root of accusations either in yourself or in others, you should make an effort to get rid of it. ",
-  "pli-tv-kd14:14.5.12": "If you don’t see such a root either in yourself or in others, you should practice so that it doesn’t reappear in the future. ",
+  "pli-tv-kd14:14.5.9": "makes accusations in the Sangha. ",
+  "pli-tv-kd14:14.5.10": "Accusations are unbeneficial and a cause of unhappiness for humanity; they’re harmful, detrimental, and a cause of suffering for gods and humans. ",
+  "pli-tv-kd14:14.5.11": "Monks, when you see such a root of accusations either in yourself or others, you should make an effort to get rid of it. ",
+  "pli-tv-kd14:14.5.12": "If you don’t see such a root either in yourself or others, you should practice so that it doesn’t emerge in the future. ",
   "pli-tv-kd14:14.5.15": "Or it may be that a monk is denigrating and controlling, ",
   "pli-tv-kd14:14.5.16": "envious and stingy, treacherous and deceitful, one who has bad desires and wrong views, or one who obstinately grasps his own views and only gives them up with difficulty. ",
   "pli-tv-kd14:14.5.17": "Any of these is disrespectful and undeferential toward the Teacher, the Teaching, and the Sangha, and he doesn’t fulfill the training. ",
