--- a/translation/de/sabbamitta/sutta/sn/sn22/sn22.85_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/sn/sn22/sn22.85_translation-de-sabbamitta.json
@@ -147,5 +147,6 @@
   "sn22.85:21.4": "Er fühlt sich von Entscheidungen angezogen … ",
   "sn22.85:21.5": "Er fühlt sich von Bewusstsein angezogen, ergreift es und macht sich die Vorstellung ‚mein Selbst‘ zu eigen. ",
   "sn22.85:21.6": "Und wenn du dich auf diese fünf mit Ergreifen verbundenen Aggregate eingelassen und sie ergriffen hast, führen sie zu deinem langanhaltenden Unglück und Leiden. ",
-  "sn22.85:22.1": "Aber ein gebildeter edler Schüler hat die Edlen gesehen und ist in der Lehre der Edlen bewandert und geübt. Er hat gute Menschen gesehen und ist in der Lehre der Guten bewandert und geübt. "
+  "sn22.85:22.1": "Aber ein gebildeter edler Schüler hat die Edlen gesehen und ist in der Lehre der Edlen bewandert und geübt. Er hat gute Menschen gesehen und ist in der Lehre der Guten bewandert und geübt. ",
+  "sn22.85:22.2": "Er betrachtet nicht Form als das Selbst, das Selbst als etwas, das Form hat, Form als im Selbst oder das Selbst als in der Form. "
 }
