--- a/translation/de/sabbamitta/sutta/sn/sn22/sn22.85_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/sn/sn22/sn22.85_translation-de-sabbamitta.json
@@ -150,5 +150,6 @@
   "sn22.85:22.1": "Aber ein gebildeter edler Schüler hat die Edlen gesehen und ist in der Lehre der Edlen bewandert und geübt. Er hat gute Menschen gesehen und ist in der Lehre der Guten bewandert und geübt. ",
   "sn22.85:22.2": "Er betrachtet nicht Form als das Selbst, das Selbst als etwas, das Form hat, Form als im Selbst oder das Selbst als in der Form. ",
   "sn22.85:22.3": "Er betrachtet nicht Gefühl als das Selbst … ",
-  "sn22.85:22.4": "Er betrachtet nicht Wahrnehmung als das Selbst … "
+  "sn22.85:22.4": "Er betrachtet nicht Wahrnehmung als das Selbst … ",
+  "sn22.85:22.5": "Er betrachtet nicht Entscheidungen als das Selbst … "
 }
