--- a/translation/de/sabbamitta/sutta/sn/sn22/sn22.85_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/sn/sn22/sn22.85_translation-de-sabbamitta.json
@@ -153,5 +153,6 @@
   "sn22.85:22.4": "Er betrachtet nicht Wahrnehmung als das Selbst … ",
   "sn22.85:22.5": "Er betrachtet nicht Entscheidungen als das Selbst … ",
   "sn22.85:22.6": "Er betrachtet nicht Bewusstsein als das Selbst, das Selbst als etwas, das Bewusstsein hat, ",
-  "sn22.85:22.7": "Bewusstsein als im Selbst oder das Selbst als im Bewusstsein. "
+  "sn22.85:22.7": "Bewusstsein als im Selbst oder das Selbst als im Bewusstsein. ",
+  "sn22.85:23.1": "Er versteht Form, die unbeständig ist, wahrhaftig als unbeständig. "
 }
