--- a/translation/de/sabbamitta/sutta/sn/sn22/sn22.85_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/sn/sn22/sn22.85_translation-de-sabbamitta.json
@@ -155,5 +155,6 @@
   "sn22.85:22.6": "Er betrachtet nicht Bewusstsein als das Selbst, das Selbst als etwas, das Bewusstsein hat, ",
   "sn22.85:22.7": "Bewusstsein als im Selbst oder das Selbst als im Bewusstsein. ",
   "sn22.85:23.1": "Er versteht Form, die unbeständig ist, wahrhaftig als unbeständig. ",
-  "sn22.85:23.2": "Er versteht Gefühl, das unbeständig ist … "
+  "sn22.85:23.2": "Er versteht Gefühl, das unbeständig ist … ",
+  "sn22.85:23.3": "Er versteht Wahrnehmung, die unbeständig ist … "
 }
