--- a/translation/de/sabbamitta/sutta/sn/sn22/sn22.85_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/sn/sn22/sn22.85_translation-de-sabbamitta.json
@@ -157,5 +157,6 @@
   "sn22.85:23.1": "Er versteht Form, die unbeständig ist, wahrhaftig als unbeständig. ",
   "sn22.85:23.2": "Er versteht Gefühl, das unbeständig ist … ",
   "sn22.85:23.3": "Er versteht Wahrnehmung, die unbeständig ist … ",
-  "sn22.85:23.4": "Er versteht Entscheidungen, die unbeständig sind … "
+  "sn22.85:23.4": "Er versteht Entscheidungen, die unbeständig sind … ",
+  "sn22.85:23.5": "Er versteht Bewusstsein, das unbeständig ist, wahrhaftig als unbeständig. "
 }
