--- a/translation/de/sabbamitta/sutta/sn/sn22/sn22.85_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/sn/sn22/sn22.85_translation-de-sabbamitta.json
@@ -160,5 +160,6 @@
   "sn22.85:23.4": "Er versteht Entscheidungen, die unbeständig sind … ",
   "sn22.85:23.5": "Er versteht Bewusstsein, das unbeständig ist, wahrhaftig als unbeständig. ",
   "sn22.85:24.1": "Er versteht Form, die Leiden ist, wahrhaftig als Leiden. ",
-  "sn22.85:24.2": "Er versteht Gefühl, das Leiden ist … "
+  "sn22.85:24.2": "Er versteht Gefühl, das Leiden ist … ",
+  "sn22.85:24.3": "Wahrnehmung, die Leiden ist … "
 }
