--- a/translation/de/sabbamitta/sutta/sn/sn22/sn22.85_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/sn/sn22/sn22.85_translation-de-sabbamitta.json
@@ -165,5 +165,6 @@
   "sn22.85:24.4": "Entscheidungen, die Leiden sind … ",
   "sn22.85:24.5": "Bewusstsein, das Leiden ist, wahrhaftig als Leiden. ",
   "sn22.85:25.1": "Er versteht Form, die nicht-selbst ist, wahrhaftig als nicht-selbst. ",
-  "sn22.85:25.2": "Er versteht Gefühl, das nicht-selbst ist … "
+  "sn22.85:25.2": "Er versteht Gefühl, das nicht-selbst ist … ",
+  "sn22.85:25.3": "Wahrnehmung, die nicht-selbst ist … "
 }
