--- a/translation/de/sabbamitta/sutta/sn/sn22/sn22.85_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/sn/sn22/sn22.85_translation-de-sabbamitta.json
@@ -167,5 +167,6 @@
   "sn22.85:25.1": "Er versteht Form, die nicht-selbst ist, wahrhaftig als nicht-selbst. ",
   "sn22.85:25.2": "Er versteht Gefühl, das nicht-selbst ist … ",
   "sn22.85:25.3": "Wahrnehmung, die nicht-selbst ist … ",
-  "sn22.85:25.4": "Entscheidungen, die nicht-selbst sind … "
+  "sn22.85:25.4": "Entscheidungen, die nicht-selbst sind … ",
+  "sn22.85:25.5": "Bewusstsein, das nicht-selbst ist, wahrhaftig als nicht-selbst. "
 }
