--- a/translation/de/sabbamitta/sutta/sn/sn22/sn22.85_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/sn/sn22/sn22.85_translation-de-sabbamitta.json
@@ -170,5 +170,6 @@
   "sn22.85:25.4": "Entscheidungen, die nicht-selbst sind … ",
   "sn22.85:25.5": "Bewusstsein, das nicht-selbst ist, wahrhaftig als nicht-selbst. ",
   "sn22.85:26.1": "Er versteht Form, die bedingt ist, wahrhaftig als bedingt. ",
-  "sn22.85:26.2": "Er versteht Gefühl, das bedingt ist … "
+  "sn22.85:26.2": "Er versteht Gefühl, das bedingt ist … ",
+  "sn22.85:26.3": "Wahrnehmung, die bedingt ist … "
 }
