--- a/translation/de/sabbamitta/sutta/sn/sn22/sn22.85_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/sn/sn22/sn22.85_translation-de-sabbamitta.json
@@ -172,5 +172,6 @@
   "sn22.85:26.1": "Er versteht Form, die bedingt ist, wahrhaftig als bedingt. ",
   "sn22.85:26.2": "Er versteht Gefühl, das bedingt ist … ",
   "sn22.85:26.3": "Wahrnehmung, die bedingt ist … ",
-  "sn22.85:26.4": "Entscheidungen, die bedingt sind … "
+  "sn22.85:26.4": "Entscheidungen, die bedingt sind … ",
+  "sn22.85:26.5": "Bewusstsein, das bedingt ist, wahrhaftig als bedingt. "
 }
