--- a/translation/de/sabbamitta/sutta/sn/sn22/sn22.85_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/sn/sn22/sn22.85_translation-de-sabbamitta.json
@@ -174,5 +174,6 @@
   "sn22.85:26.3": "Wahrnehmung, die bedingt ist … ",
   "sn22.85:26.4": "Entscheidungen, die bedingt sind … ",
   "sn22.85:26.5": "Bewusstsein, das bedingt ist, wahrhaftig als bedingt. ",
-  "sn22.85:27.1": "Er versteht Form, die ein Mörder ist, wahrhaftig als Mörder. "
+  "sn22.85:27.1": "Er versteht Form, die ein Mörder ist, wahrhaftig als Mörder. ",
+  "sn22.85:27.2": "Er versteht Gefühl, das ein Mörder ist … "
 }
