--- a/translation/de/sabbamitta/sutta/sn/sn22/sn22.85_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/sn/sn22/sn22.85_translation-de-sabbamitta.json
@@ -177,5 +177,6 @@
   "sn22.85:27.1": "Er versteht Form, die ein Mörder ist, wahrhaftig als Mörder. ",
   "sn22.85:27.2": "Er versteht Gefühl, das ein Mörder ist … ",
   "sn22.85:27.3": "Wahrnehmung, die ein Mörder ist … ",
-  "sn22.85:27.4": "Entscheidungen, die ein Mörder sind … "
+  "sn22.85:27.4": "Entscheidungen, die ein Mörder sind … ",
+  "sn22.85:27.5": "Bewusstsein, das ein Mörder ist, wahrhaftig als Mörder. "
 }
