--- a/translation/de/sabbamitta/sutta/sn/sn22/sn22.85_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/sn/sn22/sn22.85_translation-de-sabbamitta.json
@@ -179,5 +179,6 @@
   "sn22.85:27.3": "Wahrnehmung, die ein Mörder ist … ",
   "sn22.85:27.4": "Entscheidungen, die ein Mörder sind … ",
   "sn22.85:27.5": "Bewusstsein, das ein Mörder ist, wahrhaftig als Mörder. ",
-  "sn22.85:28.1": "Er fühlt sich von Form nicht angezogen, ergreift sie nicht und macht sich nicht die Vorstellung ‚mein Selbst‘ zu eigen. "
+  "sn22.85:28.1": "Er fühlt sich von Form nicht angezogen, ergreift sie nicht und macht sich nicht die Vorstellung ‚mein Selbst‘ zu eigen. ",
+  "sn22.85:28.2": "Er fühlt sich von Gefühl nicht angezogen … "
 }
