--- a/translation/de/sabbamitta/sutta/sn/sn22/sn22.85_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/sn/sn22/sn22.85_translation-de-sabbamitta.json
@@ -183,5 +183,6 @@
   "sn22.85:28.2": "Er fühlt sich von Gefühl nicht angezogen … ",
   "sn22.85:28.3": "Er fühlt sich von Wahrnehmung nicht angezogen … ",
   "sn22.85:28.4": "Er fühlt sich von Entscheidungen nicht angezogen … ",
-  "sn22.85:28.5": "Er fühlt sich von Bewusstsein nicht angezogen, ergreift es nicht und macht sich nicht die Vorstellung ‚mein Selbst‘ zu eigen. "
+  "sn22.85:28.5": "Er fühlt sich von Bewusstsein nicht angezogen, ergreift es nicht und macht sich nicht die Vorstellung ‚mein Selbst‘ zu eigen. ",
+  "sn22.85:28.6": "Und wenn du dich von diesen fünf mit Ergreifen verbundenen Aggregaten nicht angezogen fühlst und sie nicht ergreifst, führt das zu deinem langanhaltenden Nutzen und Glück.“ "
 }
