--- a/translation/de/sabbamitta/sutta/sn/sn22/sn22.85_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/sn/sn22/sn22.85_translation-de-sabbamitta.json
@@ -89,7 +89,7 @@
   "sn22.85:14.8": "und eine Leibwache zu seinem Schutz. ",
   "sn22.85:14.9": "Es wird nicht leicht sein, ihm mit Gewalt das Leben zu nehmen. ",
   "sn22.85:14.10": "Warum werde ich nicht vertraut mit ihm und nehme ihm dann das Leben?“ ",
-  "sn22.85:14.11": "Und er geht zu diesem Hausbesitzer oder Sohn eines Hausbesitzers und sagt: ",
+  "sn22.85:14.11": "Und er ginge zu diesem Hausbesitzer oder Sohn eines Hausbesitzers und sagte: ",
   "sn22.85:14.12": "‚Herr, ich möchte dir dienen.‘ ",
   "sn22.85:14.13": "Und er diente diesem Hausbesitzer oder Sohn eines Hausbesitzers. ",
   "sn22.85:14.14": "Er würde vor ihm aufstehen und nach ihm zu Bett gehen. Er wäre zuvorkommend, zeigte sich liebenswert und redete höflich. ",
