--- a/translation/de/sabbamitta/sutta/sn/sn22/sn22.85_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/sn/sn22/sn22.85_translation-de-sabbamitta.json
@@ -119,7 +119,7 @@
   "sn22.85:16.1": "Er versteht Form, die unbeständig ist, nicht wahrhaftig als unbeständig. ",
   "sn22.85:16.2": "Er versteht Gefühl, das unbeständig ist … ",
   "sn22.85:16.3": "Wahrnehmung, die unbeständig ist … ",
-  "sn22.85:16.4": "Er versteht Entscheidungen, die unbeständig sind, nicht wahrhaftig als unbeständig. ",
+  "sn22.85:16.4": "Entscheidungen, die unbeständig sind … ",
   "sn22.85:16.5": "Er versteht Bewusstsein, das unbeständig ist, nicht wahrhaftig als unbeständig. ",
   "sn22.85:17.1": "Er versteht Form, die Leiden ist, nicht wahrhaftig als Leiden. ",
   "sn22.85:17.2": "Er versteht Gefühl, das Leiden ist … ",
