--- a/translation/de/sabbamitta/sutta/an/an1/an1.51-60_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/an/an1/an1.51-60_translation-de-sabbamitta.json
@@ -22,7 +22,7 @@
   "an1.53:1.5": " ",
   "an1.54:1.0": "54 ",
   "an1.54:1.1": "„Wenn, Mönche und Nonnen, eine Nonne ein liebevolles Herz entwickelt, und sei es nur für die Dauer eines Fingerschnippens, ",
-  "an1.54:1.2": "so nennt man diese Person ",
+  "an1.54:1.2": "so nennt man sie ",
   "an1.54:1.3": "eine Nonne, die nicht ohne Vertiefung lebt, die der Anleitung des Lehrers folgt, die Rat annimmt und das Almosen des Landes nicht umsonst verzehrt. ",
   "an1.54:1.4": "Um wie viel mehr gilt das für die, die aus dieser Übung viel machen!“ ",
   "an1.54:1.5": " ",
