--- a/translation/de/sabbamitta/sutta/an/an3/an3.10_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/an/an3/an3.10_translation-de-sabbamitta.json
@@ -1,7 +1,7 @@
 {
   "an3.10:0.1": "Nummerierte Lehrreden 3.10 ",
   "an3.10:0.2": "1. Das Kapitel über Toren ",
-  "an3.10:0.3": "10. Flecken ",
+  "an3.10:0.3": "Flecken ",
   "an3.10:1.1": "„Wenn man drei Eigenschaften besitzt, drei Flecken nicht entfernt hat, wird man in die Hölle geworfen. ",
   "an3.10:1.2": "Welche drei? ",
   "an3.10:1.3": "Man ist unmoralisch, hat den Fleck der Unmoral nicht entfernt. ",
