--- a/translation/pl/hardao/sutta/an/an11/an11.2_translation-pl-hardao.json
+++ b/translation/pl/hardao/sutta/an/an11/an11.2_translation-pl-hardao.json
@@ -3,5 +3,6 @@
   "an11.2:1.2": "Oby pojawił się we mnie brak żalu",
   "an11.2:1.3": "To naturalne, mnisi, że w kimś moralnym, przestrzegającym zasad moralnych pojawia się brak żalu.",
   "an11.2:2.1": "Mnisi, ktoś w kim brak żalu, nie musi kierować się intencją: ",
-  "an11.2:2.2": "Oby pojawiło się we mnie zadowolenie."
+  "an11.2:2.2": "Oby pojawiło się we mnie zadowolenie.",
+  "an11.2:2.3": "To naturalne, mnisi, że w kimś, w kim brak żalu pojawia się zadowolenie."
 }
