--- a/translation/de/sabbamitta/sutta/an/an3/an3.32_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/an/an3/an3.32_translation-de-sabbamitta.json
@@ -1,7 +1,7 @@
 {
   "an3.32:0.1": "Nummerierte Lehrreden 3.32 ",
   "an3.32:0.2": "4. Das Kapitel über Götterboten ",
-  "an3.32:0.3": "32. Mit Ānanda ",
+  "an3.32:0.3": "Mit Ānanda ",
   "an3.32:1.1": "Da ging der Ehrwürdige Ānanda zum Buddha, verbeugte sich, setzte sich zur Seite hin und sagte: ",
   "an3.32:2.1": "„Könnte es sein, Herr, dass ein Mönch oder eine Nonne einen Versenkungszustand erreicht, in dem es kein Ich-Machen, kein Mein-Machen und keine zugrunde liegende Neigung zur Einbildung für diesen beseelten Körper gibt, noch für alle äußeren Reize; ",
   "an3.32:2.2": "und dass diese Person im Besitz der Freiheit des Herzens lebt, der Freiheit durch Weisheit, wo Ich-Machen, Mein-Machen und zugrunde liegende Neigung zur Einbildung nicht mehr sind?“ ",
