--- a/translation/de/sabbamitta/sutta/an/an3/an3.40_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/an/an3/an3.40_translation-de-sabbamitta.json
@@ -1,7 +1,7 @@
 {
   "an3.40:0.1": "Nummerierte Lehrreden 3.40 ",
   "an3.40:0.2": "4. Das Kapitel über Götterboten ",
-  "an3.40:0.3": "40. Sich in die Pflicht nehmen ",
+  "an3.40:0.3": "Sich in die Pflicht nehmen ",
   "an3.40:1.1": "„Es gibt, Mönche und Nonnen, diese drei Dinge, denen gegenüber man sich in die Pflicht nehmen soll. ",
   "an3.40:1.2": "Welche drei? ",
   "an3.40:1.3": "Sich selbst, der Welt oder der Lehre gegenüber nimmt man sich in die Pflicht. ",
