--- a/translation/de/sabbamitta/sutta/an/an3/an3.57_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/an/an3/an3.57_translation-de-sabbamitta.json
@@ -1,7 +1,7 @@
 {
   "an3.57:0.1": "Nummerierte Lehrreden 3.57 ",
   "an3.57:0.2": "6. Das Kapitel mit Brahmanen ",
-  "an3.57:0.3": "57. Mit Vacchagotta ",
+  "an3.57:0.3": "Mit Vacchagotta ",
   "an3.57:1.1": "Da ging der Wanderer Vacchagotta zum Buddha und tauschte Willkommensgrüße mit ihm aus. ",
   "an3.57:1.2": "Nach der Begrüßung und dem Austausch von Höflichkeiten setzte er sich zur Seite hin und sagte zum Buddha: ",
   "an3.57:1.3": "„Ich habe gehört, Meister Gotama, der Asket Gotama würde sagen: ",
