--- a/translation/pl/hardao/sutta/an/an11/an11.2_translation-pl-hardao.json
+++ b/translation/pl/hardao/sutta/an/an11/an11.2_translation-pl-hardao.json
@@ -5,5 +5,6 @@
   "an11.2:2.1": "Mnisi, ktoś w kim brak żalu, nie musi kierować się intencją: ",
   "an11.2:2.2": "Oby pojawiło się we mnie zadowolenie.",
   "an11.2:2.3": "To naturalne, mnisi, że w kimś, w kim brak żalu pojawia się zadowolenie.",
+  "an11.2:3.1": "Mnisi, ktoś zadowolony nie musi dokonać intencji:",
   "an11.2:7.2": "Obym znał i widział rzeczy takimi, jakie są naprawdę."
 }
