--- a/translation/de/sabbamitta/sutta/an/an3/an3.70_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/an/an3/an3.70_translation-de-sabbamitta.json
@@ -1,7 +1,7 @@
 {
   "an3.70:0.1": "Nummerierte Lehrreden 3.70 ",
   "an3.70:0.2": "7. Das große Kapitel ",
-  "an3.70:0.3": "70. Besinnungstag ",
+  "an3.70:0.3": "Besinnungstag ",
   "an3.70:1.1": "So habe ich es gehört: ",
   "an3.70:1.2": "Einmal hielt sich der Buddha bei Sāvatthī im Ostkloster auf, dem Pfahlhaus der Mutter Migāras. ",
   "an3.70:1.3": "Da ging Visākhā, die Mutter Migāras, zum Buddha, verbeugte sich und setzte sich zur Seite hin. Der Buddha sagte zu ihr: ",
